placing media queries

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 </head>
 <body>
   <header>
+    <article>
         <h1>
           Reliable, efficient delivery
         </h1>
-            <h1>
+
+        
+            <h1> 
+              <strong>
             Powered by Technology
+          </strong>
           </h1>
+          
           <p>
             Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful
@@ -68,7 +74,8 @@
 
 
         </main>
- 
+        <br><br>
+      </article>
 
 
   
